# GPU_VIDEO

./: .gitignore  README.md
Video_codec_demo/: CMakeLists.txt
Video_codec_demo/src/: CMakeLists.txt
Video_codec_demo/src/AppDec/: AppDec.cpp  CMakeLists.txt  Decode.cpp  Decode.h  common.cpp  common.h  main.cpp
Video_codec_demo/src/AppDec_thread/: AppDec.cpp  CMakeLists.txt  Decode.cpp  Decode.h  Enjpeg_queue.h  JpegEncoder.cpp  common.cpp  common.h
Video_codec_demo/src/Common/: AppDecUtils.h
Video_codec_demo/src/Mux_decode/: AppDec_muit_Gpu.cpp  AppDec_signal_Gpu.cpp  CMakeLists.txt  DecodeItem.cpp  DecodeItem.h  DecodeManager.cpp  DecodeManager.h  Demux_queue.cpp  Demux_queue.h  Enjpeg_queue.cpp  FFmpegItem.cpp  FFmpegItem.h  FFmpegManager.cpp  FFmpegManager.h  JpegEncoder.cpp  JpegEncoder.h  common.h
Video_codec_demo/src/Mux_decode_thread/: AppDec.cpp  CMakeLists.txt  DecodeItem.cpp  DecodeItem.h  DecodeManager.cpp  DecodeManager.h  Demux_queue.cpp  Demux_queue.h  Enjpeg_queue.cpp  Enjpeg_queue.h  FFmpegItem.cpp  FFmpegItem.h  FFmpegManager.cpp  FFmpegManager.h  Singleton.h  YuvConverter.h  common.cpp
Video_codec_demo/src/NvCodec/NvDecoder/: NvDecoder.cpp  NvDecoder.h
Video_codec_demo/src/Utils/: FFmpegDemuxer.h  FFmpegStreamer.h  Logger.h  NvCodecUtils.h  NvEncoderCLIOptions.h
Video_codec_demo/src/thread_test/: CMakeLists.txt  Enjpeg_queue.cpp  main.cpp
