PROJECT(Thread_test)
MESSAGE(STATUS "<VIDEO_CODEC_DEMO-src-thread_test>")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

FILE(GLOB_RECURSE DIR_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)

#LIST (APPEND DIR_SRCS ${Nv_Decoder_path})
#LIST (REMOVE_ITEM DIR_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/FFmpegManager.cpp")
#MESSAGE(STATUS ${DIR_SRCS})

SET(exe_name thread_test.bin)
ADD_EXECUTABLE(${exe_name} ${DIR_SRCS})
TARGET_LINK_LIBRARIES(${exe_name} pthread glog)



